--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,17 @@ h2 {
 
 /* QUESTION 1 */
 
+.red-threevert {
+  background-color: red;
+  width: 33.3%
+}
+
+#white {
+  color: white
+  width = 
+}
+
+
 .orange {
   background-color: orange;
 }
