--- a/styles.css
+++ b/styles.css
@@ -59,16 +59,23 @@ h2 {
 
 /* QUESTION 1 */
 
-.red-threevert {
+.red.threevert {
   background-color: red;
-  width: 33.3%
+  width: 100%;
+  height: 33.33%;
 }
 
 #white {
-  color: white
-  width = 
+  background-color: white;
+  width: 100%;
+  height: 33.33%;
 }
 
+.light-blue.threevert {
+  background-color: #00a3e0;
+  width: 100%;
+  height: 33.33%;
+}
 
 .orange {
   background-color: orange;
@@ -105,15 +112,21 @@ h2 {
 /* BEGIN QUESTION 2 */
 
 .thailand-red {
-  /* TODO */
+  background-color: #B5002D;
+  width: inherit;
+  height: 16.67%;
 }
 
 .thailand-white {
-  /* TODO */
+  background-color: white;
+  width: inherit;
+  height: 16.67%;
 }
 
 .thailand-blue {
-  /* TODO */
+  background-color: #2e2a4c;
+  width: inherit;
+  height: 33.33%;
 }
 
 /* END QUESTION 2 */
