--- a/styles.css
+++ b/styles.css
@@ -27,15 +27,26 @@ h2 {
   margin-bottom: 5rem;
 }
 
+.label {
+  color: #330000;
+  font-size: large;
+}
+
+.label:hover {
+  color:rgb(155, 41, 72);
+  font-size: xx-large;
+}
+
 .twovert {
   height: 50%;
 }
 
 .threevert {
+  height: 33.33%;
 }
 
 .threehoriz {
-  width: 33.3%;
+  width: 33.33%;
 }
 
 .narrow {
@@ -59,22 +70,16 @@ h2 {
 
 /* QUESTION 1 */
 
-.red.threevert {
+.red {
   background-color: red;
-  width: 100%;
-  height: 33.33%;
 }
 
 #white {
   background-color: white;
-  width: 100%;
-  height: 33.33%;
 }
 
-.light-blue.threevert {
+.light-blue {
   background-color: #00a3e0;
-  width: 100%;
-  height: 33.33%;
 }
 
 .orange {
@@ -113,19 +118,16 @@ h2 {
 
 .thailand-red {
   background-color: #B5002D;
-  width: inherit;
   height: 16.67%;
 }
 
 .thailand-white {
   background-color: white;
-  width: inherit;
   height: 16.67%;
 }
 
 .thailand-blue {
   background-color: #2e2a4c;
-  width: inherit;
   height: 33.33%;
 }
 
@@ -148,12 +150,18 @@ h2 {
 /* END QUESTION 3 */
 
 /* QUESTION 4 */
+.mexico {
+  display: flex;
+  flex-direction: row;
+}
+
 .mexico-green {
   background-color: #006341;
 }
 
 .mexico-img {
-  /* TODO */
+  background-color: white;
+  align-self: center;
 }
 
 .mexico-red {
@@ -173,12 +181,14 @@ h2 {
 /* For margin practice */
 .flag1 {
   background-color: red;
-  /* TODO */
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .flag2 {
   background-color: blue;
-  /* TODO */
+  margin-left: 5px;
+  margin-right: 5px;
 }
 /* For padding practice */
 .padding-container {
@@ -186,4 +196,5 @@ h2 {
   background-color: lightblue;
   background-clip: content-box, padding-box;
   /* TODO */
+  padding: 60px;
 }
